[tool.poetry]
name = "repeat interactor"
version = "0.1.0"
description = ""
authors = ["notPlancha <andre.plancha@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = {extras = ["http2"], version = "^0.23.0"}
jsonpath-ng = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
